--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "capacitor-export-file",
-  "version": "0.0.1",
-  "description": "A capacitor plugin to export file with Android SAF API",
+  "version": "0.1.0",
+  "description": "A Capacitor plugin to export files using the Android SAF (Storage Access Framework) API and iOS UIDocumentPickerViewController",
   "main": "dist/plugin.cjs.js",
   "module": "dist/esm/index.js",
   "types": "dist/esm/index.d.ts",
